chore: upgrade maven-javadoc-plugin to version 3.6.3 and update configuration in pom.xml